Fazendo a página de acessórios

--- a/acessorio.html
+++ b/acessorio.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acessórios</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/principal.css">
+    <link rel="stylesheet" href="estilos/acessorio.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    
+    <h1>Faça sua escolha</h1>
+    <div class="fotos">
+        <img src="imagens/acessorio1.jpg" alt="">
+        <img src="imagens/acessorio2.jpg" alt="">
+        <img src="imagens/acessorio3.jpg" alt="">
+        <img src="imagens/acessorio4.jpg" alt="">
+        <img src="imagens/acessorio5.jpg" alt="">
+        <img src="imagens/acessorio6.jpg" alt="">
+        <img src="imagens/acessorio7.jpg" alt="">
+    </div>
+    <p id="voltar"><a href="index.html.html">Voltar</a></p>
+    <footer>
+        <span class="material-symbols-outlined">open_in_new</span>
+        <p><a href="https://www.instagram.com/ju.bi.ju_acessorios?igsh=MXRyejR5aDI2aHdvYw==" target="_blank">Ju Biju Acessórios</a></p>
+    </footer>
 </body>
 </html>
