--- a/index.html.html
+++ b/index.html.html
@@ -18,7 +18,7 @@
          <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
          <menu id="menu">
             <ul>
-                <li><a href="pagina-principal.html">Home</a></li>
+                <li><a href="index.html.html">Home</a></li>
                 <li><a href="acessorio.html">Acessórios</a></li>
                 <li><a href="estampas.html">Estampas</a></li>
             </ul>
@@ -50,6 +50,7 @@
         }
     </script>
     <footer>
+        <span class="material-symbols-outlined">open_in_new</span>
         <p><a href="https://www.instagram.com/ju.bi.ju_acessorios?igsh=MXRyejR5aDI2aHdvYw==" target="_blank">Ju Biju Acessórios</a></p>
     </footer>
 </body>
